--- a/Docker/centoshttpd/dockerfile
+++ b/Docker/centoshttpd/dockerfile
@@ -5,9 +5,9 @@ LABEL devops_Engg = "Anup"
 RUN yum install httpd -y
 RUN yum install unzip -y
 RUN rm -rf /var/www/html/index.html
-ADD https://www.free-css.com/assets/files/free-css-templates/download/page296/oxer.zip /var/www/html/
+ADD https://www.free-css.com/assets/files/free-css-templates/download/page296/little-fashion.zip /var/www/html/
 WORKDIR /var/www/html/
-RUN unzip oxer.zip
-RUN mv  oxer-html/*  .
+RUN unzip little-fashion.zip
+RUN mv  2127_little_fashion/*  .
 EXPOSE 80
 CMD httpd -DFOREGROUND
