--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind:  Deployment
 metadata: 
-  name: deploy
+  name: deploy-app
   labels:
     app: depapp
 spec:
@@ -16,7 +16,7 @@ spec:
          #   -  { key: app, operator: Exists}
       matchLabels: 
           app: depapp
-    replicas: 10
+    replicas: 8
     template:
       metadata:
         labels:
